orders-api/overlays/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-api
  labels:
    app: orders-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders-api
  template:
    metadata:
      labels:
        app: orders-api
    spec:
      containers:
        - name: orders-api
          image: "328373003584.dkr.ecr.eu-west-2.amazonaws.com/orders-api:0.0.9"
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: 80
          readinessProbe:
            httpGet:
              path: /health
              port: 80
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
          volumeMounts:
            - name: secrets
              mountPath: /app/secrets
              readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: secret-appsettings-orders-api
